--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     if ("serviceWorker" in navigator) {
       window.addEventListener("load", () => {
         navigator.serviceWorker
-          .register("service-worker.js")
+          .register("../service-worker.js")
           .then((registration) => {
             // run after register -> install -> activate
             console.log("Service Worker is registered", registration);
