--- a/src/index.html
+++ b/src/index.html
@@ -17,43 +17,7 @@
     </button>
   </body>
 
-  <script>
-    // Register
-    if ("serviceWorker" in navigator) {
-      window.addEventListener("load", () => {
-        navigator.serviceWorker
-          .register("./service-worker.js")
-          .then((registration) => {
-            // run after register -> install -> activate
-            console.log("Service Worker is registered", registration);
-          })
-          .catch((err) => {
-            console.error("Registration failed:", err);
-          });
-      });
-    }
-
-    let deferredPrompt;
-
-    window.addEventListener("beforeinstallprompt", (e) => {
-      e.preventDefault();
-      deferredPrompt = e;
-    });
-
-    const buttonInstall = window?.document?.querySelector(
-      "#pwa-install-button"
-    );
-
-    const handleClick = (e) => {
-      deferredPrompt?.prompt("Install this app! Click install button");
-      deferredPrompt?.userChoice.then((choiceResult) => {
-        if (choiceResult.outcome === "accepted") {
-          console.log("User accepted the install prompt");
-        } else {
-          console.log("User dismissed the install prompt");
-        }
-      });
-    };
-  </script>
+  <script src="js/register.js"></script>
+  <script src="js/install.js"></script>
   <script src="js/notification.js"></script>
 </html>
